--- a/html/biodata.html
+++ b/html/biodata.html
@@ -20,9 +20,9 @@
         <section id="personal-info">
             <h3>Personal Information</h3>
             <p><strong>Name:</strong> Vamshi</p>
-            <p><strong>Address:</strong> Kudthamugeru House,Kolnadu Village, Bantwal tq,D.K-574323</p>
-            <p><strong>Email:</strong> vamshik3110@gmail.com</p> 
-            <p><strong>Phone:</strong> +91-7899568424</p>
+            <p><strong>Address:</strong> xxxxxxxxxxxxx</p>
+            <p><strong>Email:</strong> xxxxxxxxx</p> 
+            <p><strong>Phone:</strong> +91-7899xxxx</p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/vamshi-k-93017b241"_blank">LinkedIn Profile</a></p>             <p><strong>GitHub:</strong> <a href="https://github.com/Vamshi-k31">GitHub Profile</a></p>         </section>
 
         <section id="interests">
